<resources>
    <string name="app_name">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="prompt_username">Username</string>
    <string name="connect_fb">connect Facebook</string>
    <string name="connect_google">connect Google</string>
    <string name="connect_twitter">connect Twitter</string>
    <string name="connect_ig">connect Instagram</string>
    <string name="googleWebClientId">arivista.login.googleWebClientId</string>
    <string name="loading">Loading</string>
</resources>
