<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.LoginActivity">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="arivista.login.viewmodel.LoginViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={viewModel.email}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={viewModel.errorEmail}"/>

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:text="@={viewModel.password}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.errorPassword}"/>

                <Button
                    android:id="@+id/btn_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Sign In"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="Register"/>
                <Button
                    android:id="@+id/connectFbButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:background="#3b5998"
                    android:text="@string/connect_fb"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:onClick="@{() -> viewModel.connectFacebook()}"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/connectGoogleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:background="#34a853"
                    android:text="@string/connect_google"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:onClick="@{() -> viewModel.connectGoogle()}"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/connectTwitterButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#1da1f2"
                    android:text="@string/connect_twitter"
                    android:textAllCaps="false"
                    android:layout_marginBottom="30dp"
                    android:onClick="@{() -> viewModel.connectTwitter()}"
                    android:textSize="18sp"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/connectIgButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#ca2e98"
                    android:text="@string/connect_ig"
                    android:textAllCaps="false"
                    android:onClick="@{() -> viewModel.connectInstagram()}"
                    android:textSize="18sp"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>